# Web_hw_6

./: README.md  pyproject.toml
python_queries/: CustomLogger.py  connect.py  create.py  select_01.py  select_02.py  select_03.py  select_04.py  select_05.py  select_06.py  select_07.py  select_08.py  select_09.py  select_10.py  select_11.py  select_12.py
python_queries/sql_queries/: select_01.sql  select_02.sql  select_03.sql  select_04.sql  select_05.sql  select_06.sql  select_07.sql  select_08.sql  select_09.sql  select_10.sql  select_11.sql  select_12.sql
python_queries/sql_queries/create_bd/: create_table.sql  test_bd.sql
