[tool.poetry]
name = "web-hw-6"
version = "0.1.0"
description = "Create and query on BD"
authors = ["Vlad <vlad111121562@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
faker = "^23.1.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
